--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>WELCOME</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Hi, I’m Sugam Ghimire. A curious learner and aspiring professional.<br />
+								 This is my space to share my journey, projects, and ideas</p>
 							</div>
 						</div>
 						<nav>
@@ -360,5 +360,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
