--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Welcome! My name is Sugam Ghimire, and I am an aspiring international student passionate about technology, problem-solving, and continuous learning. With a strong academic record (high GPA across my high school years) and a drive to pursue higher education abroad, I am working toward opportunities that challenge me to grow both academically and personally.
+
+This portfolio highlights my achievements, ambitions, and the journey I am taking to reach my goals. </br>I am particularly motivated to explore computer science and related fields, with the vision of applying my knowledge to create meaningful impact and contribute positively to global communities.
+
+Beyond academics, I am a dedicated learner who believes in persistence, adaptability, and making the most of every opportunity.
+.</p>
 							</article>
 
 						<!-- Work -->
@@ -360,6 +364,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
