--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Welcome! My name is Sugam Ghimire, and I am an aspiring international student passionate about technology, problem-solving, and continuous learning. With a strong academic record (high GPA across my high school years) and a drive to pursue higher education abroad, I am working toward opportunities that challenge me to grow both academically and personally.
 
-This portfolio highlights my achievements, ambitions, and the journey I am taking to reach my goals. </br>I am particularly motivated to explore computer science and related fields, with the vision of applying my knowledge to create meaningful impact and contribute positively to global communities.
+This portfolio highlights my achievements, ambitions, and the journey I am taking to reach my goals. </br> </br>I am particularly motivated to explore computer science and related fields, with the vision of applying my knowledge to create meaningful impact and contribute positively to global communities.
 
 Beyond academics, I am a dedicated learner who believes in persistence, adaptability, and making the most of every opportunity.
 .</p>
@@ -364,6 +364,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
