--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy;2025 Sugam. Ghimire : <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy;2025 Sugam. Ghimire </p>
 					</footer>
 
 			</div>
@@ -364,6 +364,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
