--- a/index.html
+++ b/index.html
@@ -59,8 +59,17 @@ Beyond academics, I am a dedicated learner who believes in persistence, adaptabi
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>## Work
+
+Although I am still at the beginning of my professional journey, I have been actively building the skills and experiences that will shape my future career. My work so far has focused on: <br><br>
+
+* **Academic Excellence** – Consistently maintaining a strong GPA and demonstrating commitment to learning.<br><br>
+* **Research & Exploration** – Exploring opportunities in computer science, technology, and problem-solving to align with my long-term goals.<br><br>
+* **Projects & Practice** – Engaging in self-driven projects and learning experiences that expand my knowledge beyond the classroom.<br><br>
+* **Future Direction** – Preparing to pursue higher education abroad, where I aim to specialize in technology-driven fields and apply my skills to real-world challenges.<br><br>
+
+This section will continue to grow as I take on new opportunities, internships, and professional experiences.<br>
+</p>
 							</article>
 
 						<!-- About -->
@@ -364,6 +373,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
