--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ Beyond academics, I am a dedicated learner who believes in persistence, adaptabi
 
 Although I am still at the beginning of my professional journey, I have been actively building the skills and experiences that will shape my future career. My work so far has focused on: <br><br>
 
-* **Academic Excellence** – Consistently maintaining a strong GPA and demonstrating commitment to learning.<br><br>
-* **Research & Exploration** – Exploring opportunities in computer science, technology, and problem-solving to align with my long-term goals.<br><br>
-* **Projects & Practice** – Engaging in self-driven projects and learning experiences that expand my knowledge beyond the classroom.<br><br>
-* **Future Direction** – Preparing to pursue higher education abroad, where I aim to specialize in technology-driven fields and apply my skills to real-world challenges.<br><br>
+Academic Excellence – Consistently maintaining a strong GPA and demonstrating commitment to learning.<br><br>
+Research & Exploration – Exploring opportunities in computer science, technology, and problem-solving to align with my long-term goals.<br><br>
+Projects & Practice – Engaging in self-driven projects and learning experiences that expand my knowledge beyond the classroom.<br><br>
+Future Direction – Preparing to pursue higher education abroad, where I aim to specialize in technology-driven fields and apply my skills to real-world challenges.<br><br>
 
 This section will continue to grow as I take on new opportunities, internships, and professional experiences.<br>
 </p>
@@ -373,6 +373,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
