--- a/index.html
+++ b/index.html
@@ -76,8 +76,14 @@ This section will continue to grow as I take on new opportunities, internships, 
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article>
+<p>## About Me
+
+Beyond my academic achievements, I am someone who values curiosity, growth, and meaningful connections. I enjoy exploring new ideas, challenging myself with problem-solving, and learning skills that help me adapt in a fast-changing world. <br>
+
+I see challenges as opportunities to grow and believe that persistence and creativity are the keys to success. Whether it’s diving into technology, collaborating with others, or working on personal projects, I strive to approach everything with focus and purpose.<br>
+
+Outside of studies, I’m passionate about self-development and building a path that allows me to contribute positively to others while staying true to my goals.<br>
+</p>							</article>
 
 						<!-- Contact -->
 							<article id="contact">
@@ -373,6 +379,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
