--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Beyond academics, I am a dedicated learner who believes in persistence, adaptabi
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>## Work
+								<p> Work
 
 Although I am still at the beginning of my professional journey, I have been actively building the skills and experiences that will shape my future career. My work so far has focused on: <br><br>
 
@@ -76,7 +76,7 @@ This section will continue to grow as I take on new opportunities, internships, 
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-<p>## About Me
+<p> About Me
 
 Beyond my academic achievements, I am someone who values curiosity, growth, and meaningful connections. I enjoy exploring new ideas, challenging myself with problem-solving, and learning skills that help me adapt in a fast-changing world. <br>
 
@@ -379,6 +379,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
