--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Outside of studies, I’m passionate about self-development and building a path 
 								</form>
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.facebook.com/sgam.ghimire.9" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/sugam_ghimire1/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/SugamGhimire" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
@@ -175,7 +175,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h4>Icons</h4>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.facebook.com/sgam.ghimire.9" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="https://www.instagram.com/sugam_ghimire1/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://github.com/SugamGhimire" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
@@ -379,6 +379,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
