--- a/index.html
+++ b/index.html
@@ -381,6 +381,148 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		
 
+//new yo muni hai 
+
+
+		<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sugam Chatbot</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #f0f2f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  .chat-container {
+    width: 400px;
+    max-width: 90%;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .chat-header {
+    background: #4a90e2;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    font-weight: bold;
+  }
+  .chat-messages {
+    padding: 15px;
+    flex: 1;
+    overflow-y: auto;
+  }
+  .message {
+    margin-bottom: 15px;
+    display: flex;
+  }
+  .message.user {
+    justify-content: flex-end;
+  }
+  .message .text {
+    max-width: 70%;
+    padding: 10px 15px;
+    border-radius: 20px;
+  }
+  .message.user .text {
+    background: #4a90e2;
+    color: #fff;
+  }
+  .message.bot .text {
+    background: #e5e5ea;
+    color: #000;
+  }
+  .chat-input {
+    display: flex;
+    border-top: 1px solid #ddd;
+  }
+  .chat-input input {
+    flex: 1;
+    padding: 10px 15px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+  }
+  .chat-input button {
+    padding: 10px 20px;
+    border: none;
+    background: #4a90e2;
+    color: #fff;
+    cursor: pointer;
+  }
+</style>
+</head>
+<body>
+
+<div class="chat-container">
+  <div class="chat-header">Sugam Chatbot</div>
+  <div class="chat-messages" id="chatMessages"></div>
+  <div class="chat-input">
+    <input type="text" id="userInput" placeholder="Type a message...">
+    <button onclick="sendMessage()">Send</button>
+  </div>
+</div>
+
+<script>
+  const chatMessages = document.getElementById('chatMessages');
+  const userInput = document.getElementById('userInput');
+
+  async function sendMessage() {
+    const message = userInput.value.trim();
+    if (!message) return;
+    appendMessage('user', message);
+    userInput.value = '';
+
+    try {
+      const response = await fetch('https://api.deepseek.ai/v1/chat', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'Authorization': 'Bearer sk-74d13f8f1efa437a8c1354b49efcad91' // your API key
+        },
+        body: JSON.stringify({
+          prompt: message,
+          max_tokens: 200
+        })
+      });
+
+      const data = await response.json();
+      const botMessage = data.response || "Sorry, I couldn't understand that.";
+      appendMessage('bot', botMessage);
+    } catch (err) {
+      appendMessage('bot', "Error: " + err.message);
+    }
+  }
+
+  function appendMessage(sender, text) {
+    const messageDiv = document.createElement('div');
+    messageDiv.classList.add('message', sender);
+    const textDiv = document.createElement('div');
+    textDiv.classList.add('text');
+    textDiv.innerText = text;
+    messageDiv.appendChild(textDiv);
+    chatMessages.appendChild(messageDiv);
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+  }
+
+  // Send message on Enter key
+  userInput.addEventListener('keypress', function(e) {
+    if (e.key === 'Enter') sendMessage();
+  });
+</script>
+
+</body>
+</html>
 
 
 
@@ -388,6 +530,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
