--- a/index.html
+++ b/index.html
@@ -382,100 +382,115 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		
 
 //new yo muni hai 
+<!-- Floating Chat Bubble -->
+<div id="chatBubble">💬</div>
 
+<!-- Chat Window -->
+<div id="chatContainer">
+  <div id="chatHeader">Sugam Chatbot</div>
+  <div id="chatMessages"></div>
+  <div id="chatInput">
+    <input type="text" id="userInput" placeholder="Type a message...">
+    <button onclick="sendMessage()">Send</button>
+  </div>
+</div>
 
-		<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sugam Chatbot</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #f0f2f5;
+  /* Floating Bubble */
+  #chatBubble {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 60px;
+    height: 60px;
+    background: #4a90e2;
+    border-radius: 50%;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    color: white;
+    font-size: 30px;
+    z-index: 1000;
+    transition: transform 0.2s;
   }
-  .chat-container {
-    width: 400px;
+  #chatBubble:hover { transform: scale(1.1); }
+
+  /* Chat Window */
+  #chatContainer {
+    position: fixed;
+    bottom: 100px;
+    right: 30px;
+    width: 350px;
     max-width: 90%;
     background: #fff;
     border-radius: 10px;
-    box-shadow: 0 5px 20px rgba(0,0,0,0.2);
-    display: flex;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+    display: none;
     flex-direction: column;
     overflow: hidden;
+    z-index: 999;
   }
-  .chat-header {
+  #chatHeader {
     background: #4a90e2;
     color: #fff;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
     font-weight: bold;
+    cursor: pointer;
   }
-  .chat-messages {
-    padding: 15px;
+  #chatMessages {
+    padding: 10px;
     flex: 1;
+    max-height: 300px;
     overflow-y: auto;
   }
-  .message {
-    margin-bottom: 15px;
-    display: flex;
-  }
-  .message.user {
-    justify-content: flex-end;
-  }
+  .message { margin-bottom: 10px; display: flex; }
+  .message.user { justify-content: flex-end; }
   .message .text {
     max-width: 70%;
-    padding: 10px 15px;
+    padding: 8px 12px;
     border-radius: 20px;
   }
-  .message.user .text {
-    background: #4a90e2;
-    color: #fff;
-  }
-  .message.bot .text {
-    background: #e5e5ea;
-    color: #000;
-  }
-  .chat-input {
+  .message.user .text { background: #4a90e2; color: #fff; }
+  .message.bot .text { background: #e5e5ea; color: #000; }
+
+  #chatInput {
     display: flex;
     border-top: 1px solid #ddd;
   }
-  .chat-input input {
+  #chatInput input {
     flex: 1;
-    padding: 10px 15px;
+    padding: 8px 12px;
     border: none;
     outline: none;
-    font-size: 16px;
+    font-size: 14px;
   }
-  .chat-input button {
-    padding: 10px 20px;
+  #chatInput button {
+    padding: 8px 12px;
     border: none;
     background: #4a90e2;
     color: #fff;
     cursor: pointer;
   }
 </style>
-</head>
-<body>
-
-<div class="chat-container">
-  <div class="chat-header">Sugam Chatbot</div>
-  <div class="chat-messages" id="chatMessages"></div>
-  <div class="chat-input">
-    <input type="text" id="userInput" placeholder="Type a message...">
-    <button onclick="sendMessage()">Send</button>
-  </div>
-</div>
 
 <script>
+  const chatBubble = document.getElementById('chatBubble');
+  const chatContainer = document.getElementById('chatContainer');
   const chatMessages = document.getElementById('chatMessages');
   const userInput = document.getElementById('userInput');
+
+  // Toggle chat window
+  chatBubble.addEventListener('click', () => {
+    chatContainer.style.display = chatContainer.style.display === 'flex' ? 'none' : 'flex';
+  });
+
+  // Close chat on header click
+  document.getElementById('chatHeader').addEventListener('click', () => {
+    chatContainer.style.display = 'none';
+  });
 
   async function sendMessage() {
     const message = userInput.value.trim();
@@ -488,14 +503,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
-          'Authorization': 'Bearer sk-74d13f8f1efa437a8c1354b49efcad91' // your API key
+          'Authorization': 'Bearer sk-74d13f8f1efa437a8c1354b49efcad91'
         },
         body: JSON.stringify({
           prompt: message,
           max_tokens: 200
         })
       });
-
       const data = await response.json();
       const botMessage = data.response || "Sorry, I couldn't understand that.";
       appendMessage('bot', botMessage);
@@ -521,15 +535,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
   });
 </script>
 
-</body>
-</html>
-
 
 
 
 
 	</body>
 </html>
+
 
 
 
