--- a/index.html
+++ b/index.html
@@ -382,158 +382,29 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		
 
 //new yo muni hai 
-<!-- Floating Chat Bubble -->
-<div id="chatBubble">💬</div>
+<!-- Portfolio Intro Section -->
+<section id="portfolioIntro" style="padding:50px 20px; background:#f5f7fa; text-align:center; font-family:Arial, sans-serif;">
+  <h1 style="font-size:2.5em; color:#4a90e2; margin-bottom:20px;">Hi, I'm Sugam Ghimire</h1>
+  <p style="font-size:1.2em; max-width:700px; margin:0 auto; line-height:1.6; color:#333;">
+    I'm a passionate learner from Nepal exploring technology, AI, and web development.  
+    This portfolio showcases my projects, skills, and journey in building innovative solutions.  
+    Feel free to browse my work and reach out for collaborations or inquiries!
+  </p>
+</section>
 
-<!-- Chat Window -->
-<div id="chatContainer">
-  <div id="chatHeader">Sugam Chatbot</div>
-  <div id="chatMessages"></div>
-  <div id="chatInput">
-    <input type="text" id="userInput" placeholder="Type a message...">
-    <button onclick="sendMessage()">Send</button>
-  </div>
-</div>
+<!-- Elfsight AI Chatbot Floating Bubble -->
+<!-- Your chatbot widget will automatically float in bottom-right -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-ac31d768-5c9a-431f-8247-887f56588bba" data-elfsight-app-lazy></div>
 
+<!-- Optional: Smooth scroll to top or hero highlight -->
 <style>
-  /* Floating Bubble */
-  #chatBubble {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    width: 60px;
-    height: 60px;
-    background: #4a90e2;
-    border-radius: 50%;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 30px;
-    z-index: 1000;
-    transition: transform 0.2s;
-  }
-  #chatBubble:hover { transform: scale(1.1); }
-
-  /* Chat Window */
-  #chatContainer {
-    position: fixed;
-    bottom: 100px;
-    right: 30px;
-    width: 350px;
-    max-width: 90%;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 5px 20px rgba(0,0,0,0.3);
-    display: none;
-    flex-direction: column;
-    overflow: hidden;
-    z-index: 999;
-  }
-  #chatHeader {
-    background: #4a90e2;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  #chatMessages {
-    padding: 10px;
-    flex: 1;
-    max-height: 300px;
-    overflow-y: auto;
-  }
-  .message { margin-bottom: 10px; display: flex; }
-  .message.user { justify-content: flex-end; }
-  .message .text {
-    max-width: 70%;
-    padding: 8px 12px;
-    border-radius: 20px;
-  }
-  .message.user .text { background: #4a90e2; color: #fff; }
-  .message.bot .text { background: #e5e5ea; color: #000; }
-
-  #chatInput {
-    display: flex;
-    border-top: 1px solid #ddd;
-  }
-  #chatInput input {
-    flex: 1;
-    padding: 8px 12px;
-    border: none;
-    outline: none;
-    font-size: 14px;
-  }
-  #chatInput button {
-    padding: 8px 12px;
-    border: none;
-    background: #4a90e2;
-    color: #fff;
-    cursor: pointer;
+  /* Just to make the chatbot bubble slightly above footer if needed */
+  body {
+    position: relative;
+    min-height: 100vh;
   }
 </style>
-
-<script>
-  const chatBubble = document.getElementById('chatBubble');
-  const chatContainer = document.getElementById('chatContainer');
-  const chatMessages = document.getElementById('chatMessages');
-  const userInput = document.getElementById('userInput');
-
-  // Toggle chat window
-  chatBubble.addEventListener('click', () => {
-    chatContainer.style.display = chatContainer.style.display === 'flex' ? 'none' : 'flex';
-  });
-
-  // Close chat on header click
-  document.getElementById('chatHeader').addEventListener('click', () => {
-    chatContainer.style.display = 'none';
-  });
-
-  async function sendMessage() {
-    const message = userInput.value.trim();
-    if (!message) return;
-    appendMessage('user', message);
-    userInput.value = '';
-
-    try {
-      const response = await fetch('https://api.deepseek.ai/v1/chat', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'Authorization': 'Bearer sk-74d13f8f1efa437a8c1354b49efcad91'
-        },
-        body: JSON.stringify({
-          prompt: message,
-          max_tokens: 200
-        })
-      });
-      const data = await response.json();
-      const botMessage = data.response || "Sorry, I couldn't understand that.";
-      appendMessage('bot', botMessage);
-    } catch (err) {
-      appendMessage('bot', "Error: " + err.message);
-    }
-  }
-
-  function appendMessage(sender, text) {
-    const messageDiv = document.createElement('div');
-    messageDiv.classList.add('message', sender);
-    const textDiv = document.createElement('div');
-    textDiv.classList.add('text');
-    textDiv.innerText = text;
-    messageDiv.appendChild(textDiv);
-    chatMessages.appendChild(messageDiv);
-    chatMessages.scrollTop = chatMessages.scrollHeight;
-  }
-
-  // Send message on Enter key
-  userInput.addEventListener('keypress', function(e) {
-    if (e.key === 'Enter') sendMessage();
-  });
-</script>
 
 
 
@@ -541,6 +412,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
