--- a/index.html
+++ b/index.html
@@ -408,10 +408,27 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 
 
+//gu ho yoni
 
 
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1907976457863506"
+     crossorigin="anonymous"></script>
+<!-- 1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1907976457863506"
+     data-ad-slot="7921353085"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+		
 	</body>
 </html>
+
 
 
 
